fixed header spacing

--- a/css/index.css
+++ b/css/index.css
@@ -144,22 +144,27 @@ footer nav a {
     text-decoration: none;
 }
 
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    align-items: flex-end;
-}
 
 /* Header */
 
-header nav a {
+header {
+    margin-bottom: 20px;
+    padding: 15px;
+}
+
+header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
 	font-size: 14px;
 	margin-right: 30px;
-	color: gray;
-	text-decoration: none;
-	align-items: flex-end;
+}
+
+header nav a {
+    color: gray;
+    text-decoration: none;
+}
 
   }
 
